--- a/Bio Data.html
+++ b/Bio Data.html
@@ -22,7 +22,7 @@
             <legend>Education</legend>
             School Name:<input type="text" placeholder="School Name"><br><br>
             Class:<input type="text"><br><br>
-            Stream:<select><option>Medical</option><option>Non-Medical</option></select><br><br>
+            Stream:<select><option aria-placeholder="Stream">Stream</option><option>Medical</option><option>Non-Medical</option></select><br><br>
             Marksheet:<input type="button" value="Choose File"> No file chosen
         </fieldset>
     </form><br>
